CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(endeavour)

# The version number.
SET(endeavour_VERSION_MAJOR 0)
SET(endeavour_VERSION_MINOR 1)

# Nicer structure for binary files
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# Source code
ADD_SUBDIRECTORY(src)
